Change isBlank() to trim().isempty for backwards compat builds